Bug 1523923 - Cancel VR submit frame tasks when the VRDisplayHost is destroyed. r=kip

Differential Revision: https://phabricator.services.mozilla.com/D20692